--- a/ni-syscfg/Cargo.toml
+++ b/ni-syscfg/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 ni-syscfg-sys = { path = "../ni-syscfg-sys" }
 thiserror = "1"
+num-derive = "0.3"
+num-traits = "0.2"
