--- a/ni-syscfg/Cargo.toml
+++ b/ni-syscfg/Cargo.toml
@@ -16,3 +16,7 @@ ni-syscfg-sys = { path = "../ni-syscfg-sys", version="20.5" }
 thiserror = "1"
 num-derive = "0.3"
 num-traits = "0.2"
+
+[[bin]]
+name = "ni-syscfg"
+path = "bin/ni-syscfg.rs"
