Imaging API Complete
I want to add some utility functions to aid with imaging but the basic wrappers are now functionally complete.

--- a/ni-syscfg/Cargo.toml
+++ b/ni-syscfg/Cargo.toml
@@ -20,3 +20,7 @@ num-traits = "0.2"
 [[bin]]
 name = "ni-syscfg"
 path = "bin/ni-syscfg.rs"
+
+[[bin]]
+name = "imaging-smoke-test"
+path = "bin/imaging-smoke-test.rs"
